css/nastias-portfolio.webflow.css
/* ... */
@media screen and (max-width: 479px) {
  .utility-page-wrap {
    justify-content: center;
    align-items: center;
  }

  .utility-page-content {
    width: 19rem;
    padding: 0;
  }

  .div-password {
    align-self: flex-start;
    padding-left: .5rem;
    padding-right: .5rem;
  }

  .heading-4 {
    font-size: var(--heading--nav-text);
  }

  .card-content {
    width: 19rem;
  }

  .card-picture {
    width: 100vh;
    max-width: none;
  }

  .paragraph {
    text-align: left;
  }

  .container-nav {
    max-width: 19rem;
  }

  .header-wrapper {
    flex-flow: column;
  }

  .heading-2 {
    font-size: var(--heading--h3);
    text-align: left;
  }

  .section-cards {
    padding-bottom: 2rem;
  }

  .section-home-hero {
    padding-top: 4rem;
    padding-bottom: 4rem;
  }

  .container-large {
    grid-column-gap: 2rem;
    grid-row-gap: 2rem;
    max-width: 19rem;
  }

  .quick-stack-cards {
    width: 19rem;
    overflow: hidden;
  }

  .pick-video-small {
    height: 25rem;
  }

  .heading-3-real {
    font-size: var(--heading--nav-text);
  }

  .heading-huge {
    font-size: var(--heading--h1);
  }

  .text-field {
    width: 19rem;
  }

  .description-container {
    width: 19rem;
    height: 4rem;
  }

  .work-description-text {
    font-size: .9rem;
    line-height: 1.3rem;
  }

  .work-main-heading {
    font-size: 2.8rem;
  }

  .quick-stack-work-main {
    width: 19rem;
  }

  .button-wrap-cell {
    justify-content: flex-start;
    align-items: flex-start;
  }

  .cards-wrapper {
    grid-column-gap: 8rem;
    grid-row-gap: 8rem;
  }

  .section-about {
    padding-top: 4rem;
  }

  .quick-stack-supperpowers {
    width: 18rem;
  }

  .superpower-card {
    width: 18rem;
    height: 21.875rem;
  }

  .paragraph-big {
    font-size: var(--heading--paragraph-big);
    text-align: left;
  }

  .video {
    width: 20rem;
    height: 20rem;
  }

  .project-thumbnail {
    width: 19rem;
    height: 20rem;
  }

  .project-thumbnail.pick {
    flex-flow: column;
  }

  .table-dna {
    grid-column-gap: 8px;
    grid-row-gap: 8px;
  }

  .cell-dna {
    padding-top: 16px;
    padding-bottom: 16px;
  }

  .accent-text-dna {
    font-size: 32px;
  }

  .project-details {
    grid-column-gap: 8px;
    grid-row-gap: 8px;
  }

  .paragraph-copy {
    text-align: left;
  }

  .section-project-content-dna {
    grid-column-gap: 8rem;
    grid-row-gap: 8rem;
  }

  .tag-text {
    font-size: .9rem;
    line-height: 1.3rem;
  }

  .card-picture-pick {
    width: 50vh;
    height: 15rem;
  }
}

#w-node-_50bcda06-9f12-b8ef-3ac8-9069650fecab-095c25e3, #w-node-af230d68-3199-d7da-4e68-631b4ef4b66f-095c25e3, #w-node-db89e01f-3e58-c839-a5f3-46a62ffecd7d-095c25e3 {
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr 1fr 1fr;
}

#w-node-db89e01f-3e58-c839-a5f3-46a62ffecd7e-095c25e3, #w-node-db89e01f-3e58-c839-a5f3-46a62ffecd80-095c25e3 {
  grid-column: span 2 / span 2;
}

#w-node-_919f8e26-0bd6-5692-669b-b07d7eef91b5-095c25e3 {
  order: -9999;
}

#w-node-_24a54450-e55d-b4cc-3684-d9b6a762a7eb-095c25e3 {
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr 1fr 1fr;
}

#w-node-_24a54450-e55d-b4cc-3684-d9b6a762a7f5-095c25e3 {
  grid-column: span 3 / span 3;
}

#w-node-b6030549-5edf-d8e6-b9c5-740bb1b436ab-095c25e3, #w-node-f100ad46-fe5e-e4b2-2926-f27a1928baf6-095c25e3 {
  grid-template-rows: auto auto auto;
  grid-template-columns: auto auto auto 1fr;
}

#w-node-f100ad46-fe5e-e4b2-2926-f27a1928baf7-095c25e3 {
  grid-column: span 3 / span 3;
}

#w-node-_3965527d-38bf-eca6-1b6c-5274c863c902-095c25e3 {
  grid-column: span 4 / span 4;
}

#w-node-_7e571279-a454-82a2-b27e-b33bcfc781bf-095c25e3 {
  grid-column: span 3 / span 3;
}

#w-node-_4ea96eeb-da43-803b-d25f-08441fb6e2c2-095c25e3 {
  grid-template-rows: auto auto auto;
  grid-template-columns: auto auto auto 1fr;
}

#w-node-_4ea96eeb-da43-803b-d25f-08441fb6e2c3-095c25e3 {
  grid-column: span 3 / span 3;
}

#w-node-_4ea96eeb-da43-803b-d25f-08441fb6e2c7-095c25e3 {
  grid-column: span 4 / span 4;
}

#w-node-_4ea96eeb-da43-803b-d25f-08441fb6e2cb-095c25e3 {
  grid-column: span 3 / span 3;
}

#w-node-_49de4840-3125-e440-322c-fd3b9468dac3-095c25e3 {
  grid-template-rows: auto auto auto;
  grid-template-columns: auto auto auto 1fr;
}

#w-node-_49de4840-3125-e440-322c-fd3b9468dac4-095c25e3 {
  grid-column: span 3 / span 3;
}

#w-node-_49de4840-3125-e440-322c-fd3b9468dac8-095c25e3 {
  grid-column: span 4 / span 4;
}

#w-node-_49de4840-3125-e440-322c-fd3b9468daca-095c25e3 {
  grid-column: span 3 / span 3;
}

#w-node-_71f8330f-ba7e-6982-09bb-8df3f6caec61-095c25e3 {
  grid-template-rows: auto auto;
  grid-template-columns: auto auto auto;
}

#w-node-d41c5760-57d7-cba1-6a1e-2e1a0181bec9-19d5c138, #w-node-a3b5fc84-7303-91d0-ec58-a34733af804d-19d5c138 {
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr 1fr;
}

#w-node-a3b5fc84-7303-91d0-ec58-a34733af8068-19d5c138, #w-node-_90b38740-571f-6462-563a-de33626b5296-19d5c138, #w-node-f5090145-397c-d6f1-41ba-9c0644896bfa-19d5c138 {
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr;
}

#w-node-e1603902-7bf4-c019-bd0b-e8ce11e7ec36-b600cddb {
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr 1fr 1fr;
}

#w-node-acc93fa2-51d7-6519-c0ea-e36ee6d458f7-b600cddb, #w-node-_68a46409-10d5-2ab9-d3a7-b5ee68b30b87-b600cddb {
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr 1fr;
}

#w-node-f8dcd429-22a5-89ab-edea-bafd0ba835f9-b600cddb, #w-node-_820a92fa-2077-190d-087c-ecab813904a6-b600cddb, #w-node-a43eec51-e876-2dfa-b3c7-7526036b3658-b600cddb, #w-node-a43eec51-e876-2dfa-b3c7-7526036b3659-b600cddb, #w-node-_5209cc36-b73b-5906-f637-9d9be5abfaa7-b600cddb, #w-node-c62ec077-05bc-75cd-72d4-0e3aa9c84f6e-b600cddb, #w-node-d7c6c979-db75-0eda-141a-6f1cdcc41dff-b600cddb {
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr;
}

#w-node-d8ebf374-05d8-8c79-f81a-315276cee1d8-b600cddb {
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr 1fr;
}
/* ... */

